# ppt-pdf-study-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  base_agent.py  content_understanding.py  document_parsing.py  outline_generation.py  question_generation.py
src/api/: __init__.py  app.py  request_context.py
tests/: test_agentic_rag.py  test_agents.py  test_api_documents.py  test_api_permissions_audit.py  test_ci_workflow.py  test_cli.py  test_content_understanding.py  test_coordinator.py  test_db_migrations.py  test_db_models.py  test_document_normalization.py  test_document_service.py  test_export_product_flow.py  test_export_service.py  test_graph_rag.py  test_integration.py  test_knowledge.py  test_memory.py  test_model_router.py  test_mvp7_product_loop.py  test_mvp8_api_auth_audit.py  test_mvp8_auth.py  test_mvp8_production_readiness.py  test_mvp8_storage_queue_infra.py  test_observability.py  test_outline_generation.py  test_parsers.py  test_quality_feedback.py  test_question_generation.py  test_rag_evaluation.py  test_rag_mode_comparison.py  test_rag_route_policy.py  test_rag_router.py  test_security_audit.py  test_services.py  test_storage.py  test_storage_backend.py  test_study_agent_api.py  test_study_agent_contracts.py  test_study_agent_documents.py  (+15 more)
(+104 files in other folders)
